--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
         </activity>
         <activity android:name=".DisplayLocationReviewsActivity"></activity>
         <activity android:name=".PlaceDetails"></activity>
+        <activity android:name=".SelectLocationActivity">
+        </activity>
+
     </application>
 
 </manifest>
